Mega 'ungettify' of the library. This *only* affects the core Java library and the FromOwl class. For example Previously the API would be `int numNodes = graphDocument.getGraphs().get(0).getNodes().size();` which is a whole lot of getting. Now, following the Java record-style it reads `int numNodes = graphDocument.graphs().get(0).nodes().size();`. THIS IS ONLY A BREAKING CHANGE FOR THOSE USING THE OBOGRAPHS-CORE JAVA LIBRARY PROGRAMMATICALLY. All JSON serialisation is unaffected. Refactored the tests to use modern Java immutable collections. Refactored FromOwl to use Java 21 'enhanced switch' pattern matching to hopefully radically clarify what is going on in there.