@@ -1,11 +1,7 @@
 package org.geneontology.obographs.core.model.axiom;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -15,19 +11,15 @@ public class LogicalDefinitionAxiomTest {
     private static final String DC = "A:1";
     
     @Test
-    public void test() throws JsonProcessingException {
+    void test() {
         LogicalDefinitionAxiom lda = build();
-        assertEquals(DC, lda.getDefinedClassId());
+        assertEquals(DC, lda.definedClassId());
     }
     
     public static LogicalDefinitionAxiom build() {
-        String[] ids = {"X:1", "X:2"};
-        List<String> nodeIds = new ArrayList<>(
-                Arrays.asList(ids));
-        List<ExistentialRestrictionExpression> rs = 
-                Collections.singletonList(ExistentialRestrictionAxiomTest.build());
+        List<String> nodeIds = List.of("X:1", "X:2");
+        List<ExistentialRestrictionExpression> rs = List.of(ExistentialRestrictionAxiomTest.build());
         return new LogicalDefinitionAxiom.Builder().definedClassId(DC).genusIds(nodeIds).restrictions(rs).build();
-        
     }
 
 
